--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: 'Courier New', Courier, monospace;;
+}
+
+h1 {
+    font-size: 36px;
+    font-weight: 600;
+    color: #333;
+    line-height: 42px;
+    text-align: center;
 }
