--- a/style.css
+++ b/style.css
@@ -12,3 +12,11 @@ h1 {
     line-height: 42px;
     text-align: center;
 }
+
+h2 {
+    font-size: 26px;
+    font-weight: 300;
+    color: #333;
+    line-height: 21px;
+    text-align: center;
+}
